<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bee Hive Scale</string>
    <string name="status_baterija">status_baterija</string>
    <string name="unitID">Unit-A000001</string>
    <string name="mass">25 kg</string>
    <string name="credentials_en">Credentials</string>
    <string name="key">KEY</string>
    <string name="unit_id">UNIT ID</string>
    <string name="cancel_this">Cancel</string>
    <string name="save">Save</string>
    <string name="refresh_en">Refresh</string>
    <string name="textview">TextView</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="about_info">About Info</string>
    <string name="wait">Please wait</string>
    <string name="NO_CONNECTIVITY_ALERT" tools:ignore="MissingTranslation">No Connectivity. Reading from last good update.</string>
    <string name="_50">50</string>
    <string name="info">Information</string>
    <string name="desc01">This is complitely constructed unit, and your unit should be constructed in same way as on this image.</string>
    <string name="close">Close</string>
    <string name="desc02">This is the way you should replace battery when the unit is not operational.
       \n 1. Turn switch off.
       \n 2. Unscrew bolts, take cap off.
       \n 3. Replace battery.
       \n 4. Put cap back in its place and gently tight screws.
       \n 5. Turn switch on.
    </string>
    <string name="_24h">24h</string>
    <string name="week">WEEK</string>
    <string name="_15_days">15 DAYS</string>
    <string name="_25_05_2018">25.05.2018</string>
    <string name="dayThis">Today</string>
    <string name="days15">2 Weeks</string>
    <string name="days7">week</string>
    <string name="choose_date">Choose Date</string>
    <string name="unit">Unit</string>
    <string name="date">date</string>
    <string name="avatar">avatar</string>
    <string name="thingmass">thingMass</string>
    <string name="thingdate">thingDate</string>
    <string name="first_image">first_image</string>
    <string name="second_image">second_image</string>
</resources>
