<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="380sp"
            android:layout_height="240sp"
            android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/name_for_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/_25_05_2018"
            android:layout_gravity="top"/>

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:id="@+id/graph"
            android:layout_gravity="bottom"/>
        </FrameLayout>

        <CheckBox
            android:layout_below="@id/frame"
            android:id="@+id/thisDay"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/dayThis"
            />

        <CheckBox
            android:layout_below="@id/frame"
            android:id="@+id/thisWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/days7"
            />

        <CheckBox
            android:layout_below="@id/frame"
            android:id="@+id/thisFortnight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/days15"
            />

</RelativeLayout>