<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <TextView
            android:id="@+id/UnitID"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/unitID"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"

            android:textSize="14sp"
            android:textStyle="bold"
            android:verticalScrollbarPosition="right" />

        <TextView
            android:id="@+id/mass_indicator"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/mass"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold|italic"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/statusBaterije"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:contentDescription="@string/status_baterija"
            app:srcCompat="@mipmap/zelena_puna"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/postotakBatt"
            android:layout_width="15dp"
            android:layout_height="22sp"
            android:layout_alignLeft="@+id/statusBaterije"
            android:layout_alignRight="@+id/statusBaterije"
            android:layout_alignBottom="@+id/statusBaterije"
            android:text="@string/_50"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="8sp" />
    </RelativeLayout>


</RelativeLayout>