<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:id="@+id/Sview"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textAlignment="center"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/image01"
                android:layout_width="match_parent"
                android:layout_height="180sp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/title"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:srcCompat="@mipmap/model_1" />

            <TextView
                android:id="@+id/imageDescr_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/image01"
                android:paddingBottom="10dp"
                android:text="@string/desc01"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/image01" />

            <ImageView
                android:id="@+id/image02"
                android:layout_width="match_parent"
                android:layout_height="180sp"
                android:layout_below="@+id/imageDescr_01"
                app:layout_constraintTop_toBottomOf="@id/imageDescr_01"
                app:srcCompat="@mipmap/model_2" />

            <TextView
                android:id="@+id/imageDescr_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/image02"
                android:paddingBottom="10dp"
                android:text="@string/desc02"
                android:textAlignment="center"
                />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/closeInfo"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>